<resources>
    <string name="app_name">SunshineApp</string>

    <!-- Home -->
    <string name="toolbar_title_main">Sunshine</string>
    <string name="toolbar_editText_hint">Enter your location</string>
    <string name="menu_item_search_locations">Search locations</string>
    <string name="menu_item_refresh">Refresh</string>
    <string name="menu_item_settings">Settings</string>
    <string name="menu_item_share">Share</string>

    <string name="msg_refreshed">Refreshed</string>
    <string name="msg_text_input_empty">Please, provide correct input!</string>

    <string name="current_pressure">Pressure: %s hPa</string>
    <string name="current_wind">Wind: %s km/h</string>
    <string name="current_min_temp">Min: %s °C</string>
    <string name="current_max_temp">Max: %s °C</string>

    <!-- Settings -->
    <string name="toolbar_title_settings">Settings</string>

    <string name="pref_key_default_location" translatable="false">Default location</string>
    <string name="pref_key_unit" translatable="false">Unit</string>
    <string name="pref_key_forecast_count" translatable="false">Forecast count</string>

    <string name="pref_label_location">Default location</string>
    <string name="pref_label_unit">Temperature unit</string>
    <string name="pref_label_forecast_days">Forecast</string>

    <string name="pref_label_unit_kelvin">Kelvin</string>
    <string name="pref_label_unit_metric">Metric</string>
    <string name="pref_label_unit_imperial">Imperial</string>

    <string name="pref_unit_kelvin">Kelvin</string>
    <string name="pref_unit_metric">Metric</string>
    <string name="pref_unit_imperial">Imperial</string>

    <string name="save">Save</string>
    <string name="cancel">Cancel</string>

    <!-- Details -->
    <string name="toolbar_title_details">Details</string>

    <!-- Empty settings -->
    <string name="msg_manage_settings">In order to check current weather in your favourite place, please manage your settings first!</string>
    <string name="btn_manage_settings">Let\'s get started!</string>

    <!-- Network error -->
    <string name="msg_network_error">Something went wrong! Please, check your network connection and try again!</string>
    <string name="btn_reconnect">Reconnect</string>


</resources>
