<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:preference="http://schemas.android.com/apk/res-auto">

    <EditTextPreference
        android:inputType="text"
        android:key="@string/pref_key_default_location"
        android:singleLine="true"
        android:title="@string/pref_label_location"/>

    <ListPreference
        android:defaultValue="@string/pref_unit_metric"
        android:entries="@array/pref_units_options"
        android:entryValues="@array/pref_units_values"
        android:key="@string/pref_key_unit"
        android:title="@string/pref_label_unit"/>

    <com.sanja.example.sunshineapp.NumberPickerPreference
        android:key="@string/pref_key_forecast_count"
        android:title="@string/pref_label_forecast_days"
        android:defaultValue="10"/>

</PreferenceScreen>