<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_item_search_locations"
        android:icon="@drawable/ic_search_white"
        android:title="@string/menu_item_search_locations"
        app:showAsAction="always"/>

    <item
        android:id="@+id/menu_item_refresh"
        android:icon="@drawable/ic_refresh_white"
        android:title="@string/menu_item_refresh"
        app:showAsAction="always"/>

    <item
        android:id="@+id/menu_item_settings"
        android:icon="@drawable/ic_settings_white"
        android:title="@string/menu_item_settings"
        app:showAsAction="withText|never"/>

    <item
        android:id="@+id/menu_item_share"
        android:icon="@drawable/ic_share_white"
        android:title="@string/menu_item_share"
        app:showAsAction="withText|never"/>

</menu>